removed set support for now

--- a/demo.html
+++ b/demo.html
@@ -9,10 +9,10 @@
 <body>
 
 	<ul>
-		<li><a href="img/dlanham_Phosphoric Acid.jpg" rel="lightbox[Dlanham's artwork]"><img src="img/dlanham_Phosphoric-Acid.thumb.png" alt="" /></a></li>
-		<li><a href="img/dlanham_Entropy.jpg" rel="lightbox[Dlanham's artwork]"><img src="img/dlanham_Entropy.thumb.jpg" alt="" /></a></li>
-		<li><a href="img/dlanham_herp.jpg" rel="lightbox[Dlanham's artwork]"><img src="img/dlanham_herp.thumb.png" alt="" /></a></li>
-		<li><a href="img/dlanham_NightOwl.png" rel="lightbox[Dlanham's artwork]"><img src="img/dlanham_NightOwl.thumb.png" alt="" /></a></li>
+		<li><a href="img/dlanham_Phosphoric Acid.jpg" rel="lightbox[Dlanham's artwork]"><img src="img/dlanham_Phosphoric-Acid.thumb@2x.png" alt="" /></a></li>
+		<li><a href="img/dlanham_Entropy.jpg" rel="lightbox[Dlanham's artwork]"><img src="img/dlanham_Entropy.thumb@2x.jpg" alt="" /></a></li>
+		<li><a href="img/dlanham_herp.jpg" rel="lightbox[Dlanham's artwork]"><img src="img/dlanham_herp.thumb@2x.png" alt="" /></a></li>
+		<li><a href="img/dlanham_NightOwl.png" rel="lightbox[Dlanham's artwork]"><img src="img/dlanham_NightOwl.thumb@2x.png" alt="" /></a></li>
 	</ul>
 
 	<!--<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>-->
