--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
 	</ul>
 
 	<!--<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>-->
-	<script data-main="js/microbox.js" src="js/lib/require.js"></script>
+	<script src="dist/microbox.min.js"></script>
 	<script>
 
-		require(['microBox'], function (MicroBox) {
-
-			var mb = new MicroBox();
-
-		});
+		var mb = new Microbox();
 
 	</script>
 </body>
