--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 	</ul>
 
 	<!--<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>-->
+	<script src="node_modules/_/_.js"></script>
 	<script src="node_modules/izzy/izzy.js"></script>
 	<script src="node_modules/umodel/umodel.js"></script>
 	<script src="src/lib/polyfills.js"></script>
 	<script src="src/lib/dom.js"></script>
-	<script src="src/microbox.js"></script>
+	<script src="js/microbox.js"></script>
 
 </body>
 </html>
