refactor+fix DOM event attachment

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>microBox</title>
+	<title>microbox</title>
 	<link rel="stylesheet" href="css/microbox.css" />
 	<!--[if lte IE 9]><link rel="stylesheet" href="css/microbox-ie9.css" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="css/microbox-ie8.css" /><![endif]-->
@@ -17,10 +17,12 @@
 
 	<!--<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>-->
 	<script src="node_modules/_/_.js"></script>
-	<script src="node_modules/izzy/izzy.js"></script>
 	<script src="node_modules/umodel/umodel.js"></script>
+<!--
+	<script src="node_modules/izzy/izzy.js"></script>
 	<script src="src/lib/polyfills.js"></script>
 	<script src="src/lib/dom.js"></script>
+-->
 	<script src="js/microbox.js"></script>
 
 </body>
