--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>microbox</title>
+	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/microbox.css" />
 	<!--[if lte IE 9]><link rel="stylesheet" href="css/microbox-ie9.css" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="css/microbox-ie8.css" /><![endif]-->
