cleaner demo styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+	<h1>microbox demos</h1>
+
+	<h2>David Lanham</h2>
+	<a class="credit" href="http://www.dlanham.com/">www.dlanham.com</a>
+
 	<ul>
 		<li><a href="img/dlanham_Phosphoric Acid.jpg" rel="lightbox[Dlanham's artwork]" title="Figure 1. Bacon ipsum dolor sit amet jerky prosciutto spare ribs"><img src="img/dlanham_Phosphoric-Acid.thumb@2x.png" alt="" /></a></li>
 		<li><a href="img/dlanham_Entropy.jpg" rel="lightbox[Dlanham's artwork]" title="Figure 2. Fatback shankle beef ribs cow tail, ball tip rump capicola"><img src="img/dlanham_Entropy.thumb@2x.jpg" alt="" /></a></li>
