add more demo images

--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
 
 	<h2>David Lanham</h2>
 	<a class="credit" href="http://www.dlanham.com/">www.dlanham.com</a>
-
 	<ul>
-		<li><a href="img/dlanham_Phosphoric Acid.jpg" rel="lightbox[Dlanham's artwork]" title="Figure 1. Bacon ipsum dolor sit amet jerky prosciutto spare ribs"><img src="img/dlanham_Phosphoric-Acid.thumb@2x.png" alt="" /></a></li>
-		<li><a href="img/dlanham_Entropy.jpg" rel="lightbox[Dlanham's artwork]" title="Figure 2. Fatback shankle beef ribs cow tail, ball tip rump capicola"><img src="img/dlanham_Entropy.thumb@2x.jpg" alt="" /></a></li>
-		<li><a href="img/dlanham_herp.jpg" rel="lightbox[Dlanham's artwork]" title="Figure 3. Frankfurter turducken short ribs sausage pork chop boudin bresaola short loin"><img src="img/dlanham_herp.thumb@2x.png" alt="" /></a></li>
-		<li><a href="img/dlanham_NightOwl.png" rel="lightbox[Dlanham's artwork]" title="Figure 4. Shank fatback t-bone pork hamburger, shoulder leberkas turducken brisket prosciutto turkey ribeye pork loin. Ball tip chuck sirloin salami short loin jerky pig ham hock flank swine meatloaf shank pork loin corned beef. Salami pancetta frankfurter pork belly, shank sirloin tail meatball flank chicken venison. Venison strip steak spare ribs short ribs bacon ham hock."><img src="img/dlanham_NightOwl.thumb@2x.png" alt="" /></a></li>
+		<li><a href="img/dlanham_Phosphoric Acid.jpg" rel="lightbox[David Lanham]" title="Figure 1. Bacon ipsum dolor sit amet jerky prosciutto spare ribs"><img src="img/dlanham_Phosphoric-Acid.thumb@2x.png" alt="" /></a></li>
+		<li><a href="img/dlanham_Entropy.jpg" rel="lightbox[David Lanham]" title="Figure 2. Fatback shankle beef ribs cow tail, ball tip rump capicola"><img src="img/dlanham_Entropy.thumb@2x.jpg" alt="" /></a></li>
+		<li><a href="img/dlanham_herp.jpg" rel="lightbox[David Lanham]" title="Figure 3. Frankfurter turducken short ribs sausage pork chop boudin bresaola short loin"><img src="img/dlanham_herp.thumb@2x.png" alt="" /></a></li>
+		<li><a href="img/dlanham_NightOwl.png" rel="lightbox[David Lanham]" title="Figure 4. Shank fatback t-bone pork hamburger, shoulder leberkas turducken brisket prosciutto turkey ribeye pork loin. Ball tip chuck sirloin salami short loin jerky pig ham hock flank swine meatloaf shank pork loin corned beef. Salami pancetta frankfurter pork belly, shank sirloin tail meatball flank chicken venison. Venison strip steak spare ribs short ribs bacon ham hock."><img src="img/dlanham_NightOwl.thumb@2x.png" alt="" /></a></li>
+	</ul>
+
+	<h2>Emil Kozak</h2>
+	<a class="credit" href="http://www.emilkozak.com/">www.emilkozak.com</a>
+	<ul>
+		<li><a href="img/emilkozak_flow_11.jpg" rel="lightbox[Emil Kozak]"><img src="img/emilkozak_flow_11.jpg" alt="" /></a></li>
+		<li><a href="img/emilkozak_flow_21.jpg" rel="lightbox[Emil Kozak]"><img src="img/emilkozak_flow_21.jpg" alt="" /></a></li>
+		<li><a href="img/emilkozak_flowlines_ok_2.jpg" rel="lightbox[Emil Kozak]"><img src="img/emilkozak_flowlines_ok_2.jpg" alt="" /></a></li>
+		<li><a href="img/emilkozak_flowlines_ok_3.jpg" rel="lightbox[Emil Kozak]"><img src="img/emilkozak_flowlines_ok_3.jpg" alt="" /></a></li>
 	</ul>
 
 	<!--<script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>-->
