update demo copy

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-	<h1>microbox demos</h1>
+	<h1>microbox demo</h1>
 
 	<h2>David Lanham</h2>
 	<a class="credit" href="http://www.dlanham.com/">www.dlanham.com</a>
