--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
 <head>
+
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	
 	<title>microbox</title>
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/microbox.css" />
