add builds, change around fs

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
 
 	<title>microbox</title>
 	<link rel="stylesheet" href="css/main.css" />
-	<link rel="stylesheet" href="css/microbox.css" />
+	<link rel="stylesheet" href="../css/microbox.css" />
 </head>
 <body>
 
@@ -31,9 +31,9 @@
 		<li><a href="img/emilkozak_flowlines_ok_3.jpg" rel="lightbox[Emil Kozak]"><img src="img/emilkozak_flowlines_ok_3.jpg" alt="" /></a></li>
 	</ul>
 
-	<script src="node_modules/_/_.js"></script>
-	<script src="node_modules/umodel/umodel.js"></script>
-	<script src="js/microbox.js"></script>
+	<script src="../node_modules/_/_.js"></script>
+	<script src="../node_modules/umodel/umodel.js"></script>
+	<script src="../microbox.js"></script>
 
 </body>
 </html>
