--- a/demo/index.html
+++ b/demo/index.html
@@ -31,8 +31,8 @@
 		<li><a href="img/emilkozak_flowlines_ok_3.jpg" rel="lightbox[Emil Kozak]"><img src="img/emilkozak_flowlines_ok_3.jpg" alt="" /></a></li>
 	</ul>
 
-	<script src="js/_.js"></script>
-	<script src="js/umodel.js"></script>
+	<script src="../node_modules/u/u.js"></script>
+	<script src="../node_modules/umodel/umodel.js"></script>
 	<script src="../microbox.js"></script>
 
 </body>
